Modify SiteController to work with UserLocation instead of Zipcode

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -7,8 +7,8 @@
   </div>
 
   <div>
-    <%= f.label :zipcode_value, 'Zipcode' %>
-    <%= f.text_field :zipcode_value %>
+    <%= f.label :user_location_value, 'Zipcode' %>
+    <%= f.text_field :user_location_value %>
   </div>
 
   <div>
