Use blank? to see if there are any errors

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,4 @@
-<% if @errors && @errors.any? %>
+<% if !@errors.blank? %>
   <div id="errorExplanation">
     <h2>Please correct the following errors:</h2>
     <ul>
