Big improvements to the public facing site

--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -1,3 +1,20 @@
 #signup_message {
   display: none;
 }
+
+label {
+  font-weight: bold;
+}
+
+td {
+  padding-right: 15px;
+}
+
+p, li {
+  line-height: 1.4em;
+}
+
+.question {
+  font-weight: bold;
+  font-size: 16px;
+}
