--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-<%= yield %>
+<div id="main_content">
+  <%= yield %>
+</div>
+
+<footer>
+  <p>Background photo courtesy of <%= link_to 'Tor Even Mathisen', 'http://www.flickr.com/photos/tittentem/6767922427/' %></p>
+</footer>
 
 </body>
 </html>
