--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<header>
+  <h1 id="title">Project Aurora</h1>
+  <nav>
+    <%= link_to 'Sign up', '#signup' %>
+    <%= link_to 'How does it work?', '#how_does_it_work' %>
+    <%= link_to 'About', '#about' %>
+    <%= link_to 'FAQ', '#faq' %>
+  </nav>
+</header>
+
 <div id="main_content">
   <%= yield %>
 </div>
