--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,19 +4,21 @@
     viewing the <%= link_to 'Aurora Borealis', 'http://en.wikipedia.org/wiki/Aurora_(astronomy)' %>
     in your area.
   </p>
-  <p>
-    Sorry, but this service is currently available to US residents only.
-  </p>
 </section>
 
 <a name="signup"></a>
 <h2>Sign Up</h2>
-<section id="signup_form">
-  <% if @message.present? %>
-    <p><%= @message %></p>
-  <% else %>
-    <%= render :partial => 'signup_form' %>
-  <% end %>
+<section>
+  <p>
+    Sorry, but this service is currently available to US residents only.
+  </p>
+  <div id="signup_form">
+    <% if @message.present? %>
+      <p><%= @message %></p>
+    <% else %>
+      <%= render :partial => 'signup_form' %>
+    <% end %>
+  </div>
 </section>
 
 <a name="how_does_it_work"></a>
@@ -81,9 +83,9 @@
       a good time, you can always decline, and we'll notify you when the next solar event occurs.
     </p>
     <p>
-      In addition, we'll only notify you if the conditions are optimal.  If the sky is cloudy, we won't
+      In addition, we'll only notify you if the conditions are optimal for viewing the Aurora.  If the sky is cloudy, we won't
       wake you.  Moon to bright?  We won't wake you.  This algorithim is constantly being enhanced to
-      reduce the chances of you waking up for no reason.
+      reduce the chances of waking you up for no reason.
     </p>
   </div>
 
