--- a/app/views/site/_signup_form.html.erb
+++ b/app/views/site/_signup_form.html.erb
@@ -21,7 +21,7 @@
         <td><%= f.text_field :user_location_value %></td>
       </tr>
       <tr>
-        <td><%= f.button "Signup", :id => 'signup_button' %></td>
+        <td><%= f.button "Sign Up", :id => 'signup_button' %></td>
       </tr>
     </table>
   <% end %>
