--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,59 +1,58 @@
-<section>
-  <p>
-    Project Aurora is a <strong>FREE</strong> service that will notify you via SMS when conditions are optimal for
-    viewing the <%= link_to 'Aurora Borealis', 'http://en.wikipedia.org/wiki/Aurora_(astronomy)' %>
-    in your area.
-  </p>
-</section>
+<section id="description_and_signup">
+  <div id="description">
+    <p>
+      Project Aurora is a <strong>FREE</strong> service that will notify you via SMS when conditions are optimal for
+      viewing the <%= link_to 'Aurora Borealis', 'http://en.wikipedia.org/wiki/Aurora_(astronomy)' %>
+      in your area.
+    </p>
+    <p>
+      Sorry, but this service is currently available to US residents only.
+    </p>
+  </div>
 
-<a name="signup"></a>
-<h2>Sign Up</h2>
-<section>
-  <p>
-    Sorry, but this service is currently available to US residents only.
-  </p>
-  <div id="signup_form">
-    <% if @message.present? %>
-      <p><%= @message %></p>
-    <% else %>
-      <%= render :partial => 'signup_form' %>
-    <% end %>
+  <div id="signup">
+    <a name="signup"></a>
+    <div id="signup_form">
+      <% if @message.present? %>
+        <p><%= @message %></p>
+      <% else %>
+        <%= render :partial => 'signup_form' %>
+      <% end %>
+    </div>
   </div>
 </section>
 
-<a name="how_does_it_work"></a>
-<h2>How does it work?</h2>
-<section>
-  <p>
-    Every evening, Projet Aurora checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
-    have occurred that could trigger a geomagnetic storm, which can produce an Aurora.  If a solar event
-    has occurred, you will receive a text message notifying you of the event, and asking if you would
-    like to receive a text message during the next few nights if conditions are optimal for viewing
-    the Aurora.
-  </p>
-  <p>
-    If you indicate that you would like to be notified, Project Aurora will send you a text
-    message at night if conditions are optimal for viewing the Aurora in your area.
-  </p>
-  <p>
-    What are optimal conditions?
+<section id="details">
+  <a name="how_does_it_work"></a>
+  <h2>How does it work?</h2>
+    <p>
+      Every evening, Projet Aurora checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
+      have occurred that could trigger a geomagnetic storm, which can produce an Aurora.  If a solar event
+      has occurred, you will receive a text message notifying you of the event, and asking if you would
+      like to receive a text message during the next few nights if conditions are optimal for viewing
+      the Aurora.
+    </p>
+    <p>
+      If you indicate that you would like to be notified, Project Aurora will send you a text
+      message at night if conditions are optimal for viewing the Aurora in your area.
+    </p>
+    <p>
+      What are optimal conditions?
 
-    <ul>
-      <li>Dark. Likely in the hours past midnight.</li>
-      <li>A <%= link_to 'Kp index', 'http://en.wikipedia.org/wiki/K-index' %> strong enough to push the Aurora down to your <%= link_to 'geomagnetic latitude', 'http://en.wikipedia.org/wiki/Geomagnetic_latitude' %>.</li>
-      <li>Clear skies.</li>
-      <li>A dark moon.</li>
-    </ul>
-  </p>
-</section>
+      <ul>
+        <li>Dark. Likely in the hours past midnight.</li>
+        <li>A <%= link_to 'Kp index', 'http://en.wikipedia.org/wiki/K-index' %> strong enough to push the Aurora down to your <%= link_to 'geomagnetic latitude', 'http://en.wikipedia.org/wiki/Geomagnetic_latitude' %>.</li>
+        <li>Clear skies.</li>
+        <li>A dark moon.</li>
+      </ul>
+    </p>
 
-<a name="about"></a>
-<h2>About</h2>
-<section>
-  <p>Project Aurora was created and is maintained by <%= link_to 'John Wood', 'http://johnpwood.net' %>.</p>
+  <a name="about"></a>
+  <h2>About</h2>
+  <p>Project Aurora was created by and is maintained by <%= link_to 'John Wood', 'http://johnpwood.net' %>.</p>
   <p>
     I have always enjoyed watching the weather and the stars.  However, I'm not much of a night owl, and
-    every attempt I've made to say up to see if I could see an Aurora after a solar event has failed, miserably.
+    every attempt I've made to say up late enough to see an Aurora after a solar event has failed, miserably.
     Time and time again I would fall alseep, and wake up to find that the conditions were great for viewing
     an Aurora the night before.
   </p>
@@ -61,11 +60,9 @@
     I wanted something that would wake me up if there was a possibility of seeing an Aurora.  So, I created
     this service to do just that.
   </p>
-</section>
 
-<a name="faq"></a>
-<h2>FAQ</h2>
-<section>
+  <a name="faq"></a>
+  <h2>FAQ</h2>
   <div>
     <p class="question">What are the costs associated with this service?</p>
     <p>
