--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -26,7 +26,7 @@
   <a name="how_does_it_work"></a>
   <h2>How does it work?</h2>
     <p>
-      Every evening, Projet Aurora checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
+      Every evening, Project Aurora checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
       have occurred that could trigger a geomagnetic storm, which can produce an Aurora.  If a solar event
       has occurred, you will receive a text message notifying you of the event, and asking if you would
       like to receive a text message during the next few nights if conditions are optimal for viewing
@@ -53,7 +53,7 @@
   <p>
     I have always enjoyed watching the weather and the stars.  However, I'm not much of a night owl, and
     every attempt I've made to say up late enough to see an Aurora after a solar event has failed, miserably.
-    Time and time again I would fall alseep, and wake up to find that the conditions were great for viewing
+    Time and time again I would fall asleep, and wake up to find that the conditions were great for viewing
     an Aurora the night before.
   </p>
   <p>
@@ -75,13 +75,13 @@
     <p class="question">Will this service wake me up in the middle of the night?</p>
     <p>
       Yes, and that's the point!  The best time for viewing Auroras are in the hours past midnight.
-      But, we always ask you after a solar event has occured if you would like to be woken up
+      But, we always ask you after a solar event has occurred if you would like to be woken up
       over the next couple of days if conditions are optimal for viewing an Aurora.  If it's not
       a good time, you can always decline, and we'll notify you when the next solar event occurs.
     </p>
     <p>
       In addition, we'll only notify you if the conditions are optimal for viewing the Aurora.  If the sky is cloudy, we won't
-      wake you.  Moon to bright?  We won't wake you.  This algorithim is constantly being enhanced to
+      wake you.  Moon to bright?  We won't wake you.  This algorithm is constantly being enhanced to
       reduce the chances of waking you up for no reason.
     </p>
   </div>
@@ -91,7 +91,7 @@
     <p>
       Sadly, no.  Ambient light (city lights, etc) prevents many from seeing the Aurora.  And,
       there is no good way that I know of to detect the amount of ambient light for your location.
-      So, even if all of the other conditinos are perfect, you may still be unable to see the
+      So, even if all of the other conditions are perfect, you may still be unable to see the
       Aurora due to the amount of ambient light in your area.
     </p>
   </div>
@@ -109,6 +109,16 @@
       If you're aware of an SMS aggregator that I could use for free to deliver SMS messages internationally,
       please drop me a line at <%= mail_to 'john@johnpwood.net', 'john@johnpwood.net' %>.
     </p>
+  </div>
+
+  <div>
+    <p class="question">How do I cancel this service?</p>
+    <p>You can cancel the service at any time by texting <strong>STOP</strong> to 839863.</p>
+  </div>
+
+  <div>
+    <p class="question">How do I update my zipcode?</p>
+    <p>You can update your zipcode at any time by texting <strong>AURORA <zipcode></strong> to 839863. (ex. AURORA 90210)</p>
   </div>
 </section>
 
