--- a/app/views/site/new_user.js.erb
+++ b/app/views/site/new_user.js.erb
@@ -1,2 +1,2 @@
-$('#signup_form').html("<p id='signup_message'><%= @message %></p>");
+$('#signup_form').html("<span id='signup_message'><%= @message %></span>");
 $('#signup_message').fadeIn("slow");
