Put "US residents only" message back on the index page.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -2,7 +2,7 @@
   <div id="description">
     Project Aurora is a <strong>FREE</strong> service that will notify you via SMS when conditions are optimal for
     viewing the <%= link_to 'Aurora Borealis', 'http://en.wikipedia.org/wiki/Aurora_(astronomy)' %>
-    in your area.
+    in your area. <span id="us_only">Sorry, but this service is currently available to US residents only.</span>
   </div>
 
   <div id="signup">
