--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -165,3 +165,11 @@ p, li {
   margin-top: 15px;
   font-size: 13px;
 }
+
+#coming_soon {
+  position: relative;
+  top: 25px;
+  left: 130px;
+  font-size: 20px;
+  font-weight: bold;
+}
