--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-  <title>Project Aurora</title>
+  <title>AuroraAlarm</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag    "mobile", :media => "only screen and (max-device-width: 800px) and (min-device-width: 320px)" %>
   <%= javascript_include_tag "application" %>
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-  <h1 id="title">Project Aurora</h1>
+  <h1 id="title">AuroraAlarm</h1>
   <nav>
     <%= link_to 'How does it work?', '#how_does_it_work' %>
     <%= link_to 'About', '#about' %>
