--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,6 +1,6 @@
 <section id="description_and_signup">
   <div id="description">
-    Project Aurora is a <strong>FREE</strong> service that will notify you via SMS when conditions are optimal for
+    AuroraAlarm is a <strong>FREE</strong> service that will notify you via SMS when conditions are optimal for
     viewing the <%= link_to 'Aurora Borealis', 'http://en.wikipedia.org/wiki/Aurora_(astronomy)' %>
     in your area. <span id="us_only">Sorry, but this service is currently available to US residents only.</span>
   </div>
@@ -25,14 +25,14 @@
   <a name="how_does_it_work"></a>
   <h2>How does it work?</h2>
     <p>
-      Every evening, Project Aurora checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
+      Every evening, AuroraAlarm checks to see if any <%= link_to 'solar events', 'http://en.wikipedia.org/wiki/Coronal_mass_ejections' %>
       have occurred that could trigger a geomagnetic storm, which can produce an Aurora.  If a solar event
       has occurred, you will receive a text message notifying you of the event, and asking if you would
       like to receive a text message during the next few nights if conditions are optimal for viewing
       the Aurora.
     </p>
     <p>
-      If you indicate that you would like to be notified, Project Aurora will send you a text
+      If you indicate that you would like to be notified, AuroraAlarm will send you a text
       message at night if conditions are optimal for viewing the Aurora in your area.
     </p>
     <p>
@@ -48,7 +48,7 @@
 
   <a name="about"></a>
   <h2>About</h2>
-  <p>Project Aurora was created by and is maintained by <%= link_to 'John Wood', 'http://johnpwood.net' %>.</p>
+  <p>AuroraAlarm was created by and is maintained by <%= link_to 'John Wood', 'http://johnpwood.net' %>.</p>
   <p>
     I have always enjoyed watching the weather and the stars.  However, I'm not much of a night owl, and
     every attempt I've made to say up late enough to see an Aurora after a solar event has failed, miserably.
