Add comment that sms messages will be deleted two weeks after they are sent/received, and not when the user cancels the service.

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -128,7 +128,9 @@
       privacy, becuase we love it when people respect ours.
     </p>
     <p>
-      If you decide to cancel the service, all information we have about you is immediately and permanently deleted from our database.
+      If you decide to cancel the service, all information we have about you is immediately and permanently deleted from our database,
+      except for the SMS messages that were sent and received.  All messages are deleted two weeks after they are sent or received, giving
+      us time to investigate any issues that may be reported.
     </p>
   </div>
 </section>
