Add a "powered by" section to the footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,15 @@
 </div>
 
 <footer>
+  <div id="powered_by">
+    <h1>Powered By</h1>
+    <table>
+      <tr>
+        <td><a href="http://www.signalhq.com"><%= image_tag 'signal-logo.png' %></a></td>
+        <td><a href="http://www.swpc.noaa.gov/"><%= image_tag 'NOAA-logo.jpeg' %></a></td>
+      </tr>
+    </table>
+  </div>
   <p id="background_photo_credit">Background photo courtesy of <%= link_to 'Tor Even Mathisen', 'http://www.flickr.com/photos/tittentem/6767922427/' %></p>
 </footer>
 
