--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -173,3 +173,22 @@ p, li {
   font-size: 20px;
   font-weight: bold;
 }
+
+#powered_by {
+  margin: auto;
+  width: $content-width;
+
+  h1 {
+    font-size: 23px;
+  }
+
+  table {
+    margin-left: auto;
+    margin-right: auto;
+
+    td {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+  }
+}
