--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -76,3 +76,16 @@ button {
 #coming_soon {
   position: static;
 }
+
+#powered_by {
+  width: $content-width;
+
+  img {
+    max-width: 80%;
+    max-height: 80%;
+  }
+
+  h1 {
+    font-size: 20px;
+  }
+}
