--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
     <table>
       <tr>
         <td><a href="http://www.signalhq.com"><%= image_tag 'signal-logo.png' %></a></td>
-        <td><a href="http://www.swpc.noaa.gov/"><%= image_tag 'NOAA-logo.jpeg' %></a></td>
+        <td><a href="http://www.noaa.gov"><%= image_tag 'NOAA-logo.jpeg' %></a></td>
       </tr>
     </table>
   </div>
