Add PayPal donate button, in case there are any kind souls out there who would like to buy me a beer.

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -87,6 +87,11 @@ button {
     max-height: 80%;
   }
 
+  input[type="image"] {
+    max-width: 90%;
+    max-height: 90%;
+  }
+
   h1 {
     font-size: 20px;
   }
