--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,14 @@
       <tr>
         <td><a href="http://www.signalhq.com"><%= image_tag 'signal-logo.png' %></a></td>
         <td><a href="http://www.noaa.gov"><%= image_tag 'NOAA-logo.jpeg' %></a></td>
+        <td>
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="53ZPT5WV2RDQ4">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </td>
       </tr>
     </table>
   </div>
